--- a/website/apps/alibrary/templates/alibrary/artist_detail.html
+++ b/website/apps/alibrary/templates/alibrary/artist_detail.html
@@ -40,7 +40,7 @@
                 <a href="#management" data-toggle="tab">{% trans "Management" %}</a>
             </li>
             <li>
-                <a href="#history" data-toggle="tab">{% trans "History" %}</a>
+                <a href="#history" data-toggle="tab">{% trans "Edit History" %}</a>
             </li>
             <li>
                 <a href="#statistics" data-toggle="tab">{% trans "Statistics" %}</a>
