--- a/website/apps/alibrary/templates/alibrary/label_detail.html
+++ b/website/apps/alibrary/templates/alibrary/label_detail.html
@@ -59,7 +59,7 @@
 			</li>
 			-->
 			<li>
-				<a href="#history" data-toggle="tab">{% trans "History" %}</a>
+				<a href="#history" data-toggle="tab">{% trans "Edit History" %}</a>
 			</li>
 		</ul>
 	</div>
