--- a/website/apps/alibrary/templates/alibrary/media_edit.html
+++ b/website/apps/alibrary/templates/alibrary/media_edit.html
@@ -98,13 +98,15 @@
 
             <fieldset>
                 <legend>
-                    {% trans "Extra artists" %}<span class="pull-right"></span>
+                    {% trans "Credits & Credited Artists" %}<span class="pull-right"></span>
                 </legend>
+                <!--
                 <div class="notes-form notes-inline notes-info">
                     <p>
                         {% trans "Allows you to add additional Artists and their 'roles'" %}<br>
                     </p>
                 </div>
+                -->
 
                 {% crispy extraartist_form %}
 
