--- a/website/apps/alibrary/templates/alibrary/playlist_detail.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_detail.html
@@ -55,7 +55,7 @@
                 <a href="#description" data-toggle="tab">{% trans "Description" %}</a>
             </li>
             <li>
-                <a href="#history" data-toggle="tab">{% trans "History" %}</a>
+                <a href="#history" data-toggle="tab">{% trans "Edit History" %}</a>
             </li>
             <li>
                 <a href="#emissions" data-toggle="tab">{% trans "Emissions" %} ({{ object.get_emissions.count }})</a>
