--- a/website/apps/alibrary/templates/alibrary/release/list_item_l.html
+++ b/website/apps/alibrary/templates/alibrary/release/list_item_l.html
@@ -108,11 +108,11 @@
                     </li>
                     {% endcomment %}
 
-                    {% comment %}
+                    {% comment %}{% endcomment %}
 
                     {% include "alibrary/element/_track_indicator.html" %}
 
-                    {% endcomment %}
+
 
                 </ul>
             </div>
