--- a/website/apps/alibrary/templates/alibrary/release_edit.html
+++ b/website/apps/alibrary/templates/alibrary/release_edit.html
@@ -168,11 +168,14 @@
                 <div class="form-header row-fluid">
 
                     <div id="editor_mode_switch" class="span4">
+                        &nbsp;
+                        <!--
                         <ul class="unstyled horizontal ui-persistent" id="editor_mode" data-uistate="init">
                             <li>Display</li>
                             <li><a data-mode="s" href="#"><i class="icon-list"></i></a></li>
                             <li><a data-mode="m" href="#"><i class="icon-th-list"></i></a></li>
                         </ul>
+                        -->
                     </div>
 
                     <div id="offset_selector" class="span8">
