--- a/website/apps/aplayer/templates/aplayer/popup.html
+++ b/website/apps/aplayer/templates/aplayer/popup.html
@@ -21,10 +21,13 @@
             <div class="navbar-inner">
 
                 <a class="brand" href="#">
-                    <img class="hidden-while-playing hidden-while-buffering" src="{{ STATIC_URL }}aplayer/img/icon.base.gif"/>
-                    <img class="hidden-while-buffering" src="{{ STATIC_URL }}aplayer/img/icon.playing.gif"/>
-                    <img class="hidden-while-playing" src="{{ STATIC_URL }}aplayer/img/icon.buffering.gif"/>
-                    <img class="hidden-while-playing" src="{{ STATIC_URL }}aplayer/img/icon.paused.gif"/>
+
+                    <img class="__hidden-while-buffering" src="{{ STATIC_URL }}aplayer/img/icon.playing.gif"/>
+                    <!--
+                    <img class="__hidden-while-playing __hidden-while-buffering" src="{{ STATIC_URL }}aplayer/img/icon.base.gif"/>
+                    <img class="__hidden-while-playing" src="{{ STATIC_URL }}aplayer/img/icon.buffering.gif"/>
+                    <img class="__hidden-while-playing" src="{{ STATIC_URL }}aplayer/img/icon.paused.gif"/>
+                    -->
                 </a>
 
                 <div class="nav-collapse collapse">
