--- a/website/site-static/sass/element/_itemview.sass
+++ b/website/site-static/sass/element/_itemview.sass
@@ -74,16 +74,16 @@ section.comments.disqus
 
 
 
-    
+
 // inner listing & sections
 .item_detail .item_inner section
 
-  
+
 
   h2
     font-size: 16px
     color: #a5a5a5
-    
+
   .s .list_body_row.item
     &:first-child
       .list_body_item
@@ -91,7 +91,7 @@ section.comments.disqus
 
   &.top, &.flop, &.contribution
     margin-top: 15px
-    
+
   &.description
     margin-top: 15px
 
@@ -99,12 +99,32 @@ section.comments.disqus
     margin-top: 15px
     .markdown
       // +markdown()
-    
+
   &.profile
     margin-top: 15px
     .markdown
       // +markdown()
-    
+
+  &.activities
+    margin-top: 15px
+
+  &.broadcasts
+    margin-top: 15px
+
+  &.lyrics
+    margin-top: 15px
+
+  &.uploads
+    margin-top: 15px
+
+  &.emissions
+    margin-top: 15px
+
+
+
+
+
+
   &.history
     margin-top: 15px
     div.item
@@ -114,7 +134,7 @@ section.comments.disqus
       p
         color: #5a5a5a
         font-size: 90%
-        
+
   &.appearance
     margin-top: 15px
 
@@ -124,7 +144,7 @@ section.comments.disqus
   &.statistics
     margin-top: 15px
 
-        
+
   &.media
     margin-top: 15px
 
@@ -137,14 +157,14 @@ section.comments.disqus
 
 .iteminfo
   padding: 0
-  
+
   font-size: 90%
   line-height: 11px
   text-align: left
-  
-  
 
-    
+
+
+
   .image
     img
       width: 135px
@@ -159,10 +179,10 @@ section.comments.disqus
 
   .container_content
     // padding: 15px 15px 0
-    
+
     dl
       padding: 0
-      margin: 0 
+      margin: 0
       list-style-type: none
       width: 100%
       margin: 0 0 7px
@@ -204,30 +224,30 @@ section.comments.disqus
             i
               font-size: 180%
               line-height: 17px
-		  
-		
+
+
       &.links.external
 
         dd
           float: none
-		  
 
 
-		  
-		  
-		  
+
+
+
+
     li
       padding: 0
-      margin: 0  
-     
-      
+      margin: 0
+
+
     p
       color: #666666
       &.label
         width: 70px
         color: #000000
-		
-      
+
+
   .container_image
     padding: 14px
     a
@@ -236,7 +256,7 @@ section.comments.disqus
       &:hover
         border: 1px solid #00BB00
 
-  .item_menu 
+  .item_menu
     //margin-bottom: 20px
     h3
       margin: 0
@@ -251,7 +271,7 @@ section.comments.disqus
 
 // analyse display
 .item_detail
-  section.analyse
+  section.analyse, section.file-properties
     // background: #ff0000
     table
       thead tr
@@ -345,7 +365,7 @@ section.comments.disqus
         //border-bottom: #fff
         background-color: #fff
         color: $main-a
-        
+
     a
       background: none repeat scroll 0 0 #e1e1e1
       color: #666666
@@ -399,8 +419,8 @@ section.item_inner .tab-pane
         color: #a5a5a5
       dl
         margin: 4px 0 8px
-  
-  
+
+
 
 
 // relations in sidebar
