--- a/website/site-static/sass/element/_listview.sass
+++ b/website/site-static/sass/element/_listview.sass
@@ -382,26 +382,26 @@
         &.list_body_item
           background-image: url(/static/img/base/defaults/listview.release.xl.png)
           background-size: 36px 36px
-      .c2 // name
+      .c2
         width: 300px
-      .c3 // indicator
+      .c3
         width: 50px
         padding-right: 10px
-      .c4 // label / release
+      .c4
         width: 160px
-      .c5 // license
+      .c5
         width: 68px
         text-align: center
         .iconset-license
           position: relative
           top: 10px
           font-size: 14px
-      .c6 // date
+      .c6
         width: 70px
         padding-right: 12px
-      .c7 // type
+      .c7
         width: 70px
-      .c8 // secondary actions
+      .c8
         width: 40px
     
     /* playlists */
@@ -410,7 +410,7 @@
         &.list_body_item
           background-image: url(/static/img/base/defaults/listview.playlist.s.png)
           background-size: 36px 36px
-      .c8 // secondary actions
+      .c8
         width: 40px
       
     /* artists */
@@ -419,7 +419,7 @@
         &.list_body_item
           background-image: url(/static/img/base/defaults/listview.artist.xl.png) 
           background-size: 36px 36px
-      .c4 // links
+      .c4
         .relations > ul
           position: relative
           top: 10px
@@ -456,7 +456,7 @@
       .c4
         width: 100px
         // min-width: 170px
-      .c5 // license
+      .c5
         width: 68px
         text-align: center
         .iconset-license
@@ -606,7 +606,7 @@
             a > span.service
               display: none
 
-      .c4 // tags
+      .c4
         //background-color: orangered
         // cloud (inline)
         position: relative
@@ -648,7 +648,7 @@
         // width: 214px
       .c3
         width: 178px
-      .c4 // tags
+      .c4
         //background-color: orangered
         // cloud (inline)
         position: relative
