--- a/website/site-static/sass/wip.sass
+++ b/website/site-static/sass/wip.sass
@@ -1,5 +1,5 @@
 // WORK IN PROGRESS FILE - FOR FASTER PROCESSING
-@import "compass/utilities/general/clearfix"
+// @import "compass/utilities/general/clearfix"
 @import vars
 @import site/variables
 
