--- a/website/apps/alibrary/templates/alibrary/element/sidebar/_ordering.html
+++ b/website/apps/alibrary/templates/alibrary/element/sidebar/_ordering.html
@@ -20,9 +20,9 @@
                                 {% if get.order_by == order.key %}
                                 <span class="pull-right_">
                                     {% if get.direction == "ascending" %}
-                                        <i class="icon-chevron-down"></i>
+                                        <i class="icon-angle-down"></i>
                                     {% else %}
-                                        <i class="icon-chevron-up"></i>
+                                        <i class="icon-angle-up"></i>
                                     {% endif %}
                                 </span>
                                 {% endif %}
