--- a/website/apps/alibrary/templates/alibrary/media/_detail_info.html
+++ b/website/apps/alibrary/templates/alibrary/media/_detail_info.html
@@ -1,8 +1,8 @@
-{% load truncate i18n thumbnail arating_tags calc atracker_tags %}
+{% load truncate i18n thumbnail arating_tags calc atracker_tags spacify_tags %}
 <div class="span7 padded-h container_content">
 
 	<div class="page-header">
-		<h2>{{ object.name|truncate_chars_inner:40 }} <small>{{ object.get_releasetype_display }}</small></h2>
+		<h2>{{ object.name|truncate_chars_inner:40 }} <small>{{ object.get_mediatype_display }}</small></h2>
 	</div>
 
 	<dl class="dl-horizontal main">
@@ -100,6 +100,7 @@
 
 	</dl>
 
+{% comment %}
 	<dl class="dl-horizontal">
 
 		<dt>
@@ -129,6 +130,7 @@
 		</dd>
 
 	</dl>
+{% endcomment %}
 
 	{% if object.relations.generic.count > 0 %}
 	<dl class="dl-horizontal">
@@ -170,7 +172,7 @@
 	<dl class="dl-horizontal sub">
 
 		<dt>
-			{% trans "History" %}:
+			{% trans "Edit History" %}:
 		</dt>
 		<dd>
 
@@ -179,7 +181,7 @@
 			{% endif %}
 
 			{% if object.creator %}
-			<span class="key">{% trans "Created by" %}:</span><span class="value"><a href="{{ object.creator.get_absolute_url }}">{{ object.creator }}</a></span> |
+			<span class="key">{% trans "Added by" %}:</span><span class="value"><a href="{{ object.creator.get_absolute_url }}">{{ object.creator }}</a></span> |
 			{% endif %}
 
 			<!--
@@ -208,16 +210,16 @@
 			<div class="clear"></div>
 		</dd>
 
-		{% if object.tags %}
-		<dt>
-			{% trans "Tags" %}:
-		</dt>
-		<dd>
-			{% for tag in object.tags %}
-			{{ tag.name }}{% if not forloop.last %},{% endif %}
-			{% endfor %}
-		</dd>
-		{% endif %}
+        {% if object.tags %}
+            <dt>
+                {% trans "Tags" %}:
+            </dt>
+            <dd>
+                {% for tag in object.tags %}
+                    <span class="tag">{{ tag.name|spacify }}</span>
+                {% endfor %}
+            </dd>
+        {% endif %}
 
 	</dl>
 
