--- a/website/apps/alibrary/templates/alibrary/media/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/media/list_item_s.html
@@ -67,7 +67,7 @@
 
                     &nbsp;
                     <a href="{% spurl base=request.get_full_path remove_query_param="page" set_query="artist={{ item.artist.slug }}" %}"
-                       title="{% trans "Only show releases by" %} {{ item.artist.name }}"
+                       title="{% trans "Only show tracks by" %} {{ item.artist.name }}"
                        style="vertical-align: top;"><span class="filter icon"></span></a>
 
 
@@ -119,7 +119,7 @@
 
                     &nbsp;
                     <a href="{% spurl base=request.get_full_path remove_query_param="page" set_query="release={{ item.release.slug }}" %}"
-                       title="{% trans "Only show releases on" %} {{ item.release.name }}"
+                       title="{% trans "Only show tracks on" %} {{ item.release.name }}"
                        style="vertical-align: top;"><span class="filter icon"></span></a>
 
 
