--- a/website/apps/alibrary/templates/alibrary/media_detail.html
+++ b/website/apps/alibrary/templates/alibrary/media_detail.html
@@ -4,10 +4,13 @@
 
 {% block heading %} <!-- heading / icon (large one) -->
 
-    {% addtoblock "js-post" %}
-        <script type="text/javascript" src="{{ STATIC_URL }}alibrary/js/lib/raphael-min.js"></script>{% endaddtoblock %}
-    {% addtoblock "js-post" %}
-        <script type="text/javascript" src="{{ STATIC_URL }}aplayer/js/detail.js"></script>{% endaddtoblock %}
+    {% addtoblock "js-post" %}<script src="{{ STATIC_URL }}alibrary/js/lib/raphael-min.js"></script>{% endaddtoblock %}
+    {% addtoblock "js-post" %}<script src="{{ STATIC_URL }}aplayer/js/detail.js"></script>{% endaddtoblock %}
+
+    <!-- statistic tools -->
+    {% addtoblock "js-post" %}<script src="{{ STATIC_URL }}alibrary/js/statistics.js"></script>{% endaddtoblock %}
+
+
 
 
     {% addtoblock "js-post" %}
@@ -23,10 +26,15 @@
                     'play': {% if perms.alibrary.play_media %}true{% else %}false{% endif %},
                     'add': {% if user.is_authenticated %}true{% else %}false{% endif %}
                 }
-
                 detail_player.init();
-
                 window.detail_player = detail_player;
+
+
+
+                var stats = new StatisticApp;
+                stats.ct = 'media';
+                stats.id = object.pk;
+                stats.init();
 
             });
         </script>
@@ -78,11 +86,17 @@
             {% if object.appearances.count > 0 %}
                 <li>
                     <a href="#appearance" data-toggle="tab">{% trans "Appearance" %}
-                        ({{ object.appearances.count }})</a>
+                        {% comment %}({{ object.appearances.count }}){% endcomment %}</a>
+                </li>
+            {% endif %}
+
+            {% if object.lyrics %}
+                <li>
+                    <a href="#lyrics" data-toggle="tab">{% trans "Lyrics" %}</a>
                 </li>
             {% endif %}
             <li>
-                <a href="#history" data-toggle="tab">{% trans "History" %}</a>
+                <a href="#history" data-toggle="tab">{% trans "Edit History" %}</a>
             </li>
             <li>
                 <a href="#statistics" data-toggle="tab">{% trans "Statistics" %}</a>
@@ -128,15 +142,9 @@
                 {% endif %}
 
 
-
+                {%  if object.echonest_id %}
                 <section class="analyse">
                     <h2>{% trans "Track analysis" %}</h2>
-
-                    <!--
-                        {{ object.get_stream_url }}<br>
-                        {{ object.get_encode_url }}<br>
-                        -->
-
 
                     <table class=" table-condensed" style="width: 100%;">
                         <thead>
@@ -212,6 +220,37 @@
 
 
                 </section>
+                {% endif %}
+
+
+
+                <section class="file-properties">
+                    <h2>{% trans "Audio Properties" %}</h2>
+
+
+                    <table class=" table-condensed" style="width: 100%;">
+                        <thead>
+                        <tr>
+                            <th>{% trans "Format" %}</th>
+                            <th>{% trans "Filesize" %}</th>
+                            <th>{% trans "Samplerate" %}</th>
+                            <th>{% trans "Bitrate" %}</th>
+                            <th>{% trans "Filename" %}</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td class="value">{{ object.base_format|upper }}</td>
+                            <td class="value">{{ object.base_filesize|filesizeformat }}</td>
+                            <td class="value">{{ object.base_samplerate }}</td>
+                            <td class="value">{{ object.base_bitrate }}</td>
+                            <td class="value">{% if obj.filename %}{{ object.filename }}{% endif %}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+
+
+                </section>
 
 
             </div>
@@ -220,7 +259,7 @@
 
                 <section class="appearance">
 
-                    <h2>{% trans "Appears on" %}</h2>
+                    <h2>{% trans "Playlists using this track" %}</h2>
 
                     <div class="listview container playlist s">
 
@@ -233,6 +272,20 @@
                             {% endwith %}
                         </div>
                     </div>
+
+                    <h2 style="margin-top: 20px;">{% trans "Credits & Credited Artists" %}</h2>
+
+
+                    <ul class="__horizontal unstyled small">
+                    {% for ea in object.extraartist_media.all %}
+                        <li>
+                            <a href="{{ ea.artist.get_absolute_url }}">{{ ea.artist.name }}</a>
+                            <small>[{{ ea.profession.name }}]</small>
+                        </li>
+                    {% endfor %}
+                    </ul>
+
+
 
                 </section>
 
@@ -248,6 +301,21 @@
                     <section class="video">
 
                         <h2>{% trans "Video Clip" %}</h2>
+
+                    </section>
+
+                </div>
+            {% endif %}
+
+
+            {% if object.lyrics %}
+                <div class="tab-pane" id="lyrics">
+
+                    <section class="lyrics">
+
+                        <h2>{% trans "Lyrics" %}</h2>
+
+                        {{ object.lyrics|linebreaks }}
 
                     </section>
 
