--- a/website/apps/alibrary/templates/alibrary/release/_detail_info.html
+++ b/website/apps/alibrary/templates/alibrary/release/_detail_info.html
@@ -176,7 +176,7 @@
 <dl class="dl-horizontal sub">
 
     <dt>
-        {% trans "History" %}:
+        {% trans "Edit History" %}:
     </dt>
     <dd>
 
@@ -186,7 +186,7 @@
         {% endif %}
 
         {% if object.creator %}
-            <span class="key">{% trans "Created by" %}:</span>
+            <span class="key">{% trans "Added by" %}:</span>
             <span class="value"><a href="{{ object.creator.get_absolute_url }}">{{ object.creator }}</a></span> |
         {% endif %}
 
@@ -224,18 +224,6 @@
         <span class="value">28</span> <span class="key">{% trans "Downloads" %}</span>
     </dd>
 
-    <!--
-    {% if object.tags %}
-        <dt>
-            {% trans "Tags" %}:
-        </dt>
-        <dd>
-            {% for tag in object.tags %}
-                {{ tag.name }}{% if not forloop.last %},{% endif %}
-            {% endfor %}
-        </dd>
-    {% endif %}
-    -->
     {% if object.tags %}
         <dt>
             {% trans "Tags" %}:
