--- a/website/apps/alibrary/templates/alibrary/release_detail.html
+++ b/website/apps/alibrary/templates/alibrary/release_detail.html
@@ -70,7 +70,7 @@
                     </li>
                 {% endif %}
                 <li>
-                    <a href="#history" data-toggle="tab">{% trans "History" %}</a>
+                    <a href="#history" data-toggle="tab">{% trans "Edit History" %}</a>
                 </li>
                 <!--
                 <li>
