--- a/website/templates/skeleton/toolbar.html
+++ b/website/templates/skeleton/toolbar.html
@@ -26,11 +26,13 @@
 						<li><a href="/admin/"><i class="icon-dashboard"></i> <span>{% trans 'Administration' %}</span></a></li>
 						{% endif %}
 						
-						<li><a href="{% url postman_inbox %}"><i class="icon-envelope-alt"></i><span> {% trans 'Messages' %} [{{ postman_unread_count }}]</span></a></li>
-						
+						<li><a href="{% url postman_inbox %}"><i class="icon-envelope-alt"></i><span> {% trans 'Messages' %} {{ postman_unread_count }}</span></a></li>
+
+                        {% comment %}
 						{% if user|user_stream_count > 0 %}
 						<li class="messages"><a href="#"><i class="icon-comment icon-white"></i> <span class="icon-label">{{ user|user_stream_count }}</span></a></li>
 						{% endif %}
+						{% endcomment %}
 						
 					{% else %}
 
