--- a/website/templates/base/_common_script.html
+++ b/website/templates/base/_common_script.html
@@ -1,9 +1,5 @@
 {% load sekizai_tags value_from_settings nunjucks_tags pushy_asset_tags %}
 
-	<!-- load jquery from cdn, fallback if neccessary -->
-	{% addtoblock "js-head" %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>{% endaddtoblock %}
-	{% addtoblock "js-head" %}<script>window.jQuery || document.write('<script src="{{ STATIC_URL }}js/lib/jquery-1.8.1.min.js"><\/script>')</script>{% endaddtoblock %}
-
 	<!-- js-head, rendered in head :) block -->
 	{% addtoblock "js-head" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery-1.8.1.min.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-head" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery-ui-1.9.2.custom.min.js"></script>{% endaddtoblock %}
@@ -81,10 +77,9 @@
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.autogrow.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.qtip.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.tools.min.js"></script>{% endaddtoblock %}
-	{% addtoblock "js-post" %}<!--<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.tabslide.js"></script>-->{% endaddtoblock %}
-	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.pulse.js"></script>{% endaddtoblock %}
-	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.highlight.js"></script>{% endaddtoblock %}
-	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.watch.js"></script>{% endaddtoblock %}
+	{% addtoblock "js-uncompressed" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.pulse.js"></script>{% endaddtoblock %}
+	{% addtoblock "js-uncompressed" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.highlight.js"></script>{% endaddtoblock %}
+	{% addtoblock "js-uncompressed" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.watch.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.scrollfollow.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.nanoscroller.js"></script>{% endaddtoblock %}
 
@@ -124,9 +119,8 @@
 	
 	
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}arating/js/base.js"></script>{% endaddtoblock %}
-	
-	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util.base.js"></script>{% endaddtoblock %}
-	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/base.ui.js"></script>{% endaddtoblock %}
+
+	{% addtoblock "js-uncompressed" %}<script type="text/javascript" src="{{ STATIC_URL }}js/base.ui.js"></script>{% endaddtoblock %}
 	
 	{% addtoblock "js-post" %}<!--<script type="text/javascript" src="{{ STATIC_URL }}js/edit.js"></script>-->{% endaddtoblock %}
 
@@ -134,9 +128,9 @@
 	<!-- alibrary apps -->
 	
 	<!-- utils -->
-	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util/util.base.js"></script>{% endaddtoblock %}
-	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util/util.notify.js"></script>{% endaddtoblock %}
-	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util/util.dialog.js"></script>{% endaddtoblock %}
+	{% addtoblock "js-uncompressed" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util/util.base.js"></script>{% endaddtoblock %}
+	{% addtoblock "js-uncompressed" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util/util.notify.js"></script>{% endaddtoblock %}
+	{% addtoblock "js-uncompressed" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util/util.dialog.js"></script>{% endaddtoblock %}
 
 
 
