--- a/website/apps/alibrary/templates/alibrary/media_detail.html
+++ b/website/apps/alibrary/templates/alibrary/media_detail.html
@@ -353,10 +353,12 @@
 
             <h2>{% trans "Statistics" %}</h2>
 
-
             <div id="statistics_container" style="min-height: 240px;">
                 <div class="message">{% trans "Loading statistics" %}</div>
                 <!-- dynamic content -->
+            </div>
+            <div class="choices-container">
+                <ul class="unstyled pull-right" id="plot_choices"></ul>
             </div>
 
 
