--- a/website/apps/alibrary/templates/alibrary/release_detail.html
+++ b/website/apps/alibrary/templates/alibrary/release_detail.html
@@ -77,6 +77,7 @@
                     <a href="#statistics" data-toggle="tab">{% trans "Statistics" %}</a>
                 </li>
                 -->
+
             </ul>
         </div>
 
@@ -135,7 +136,7 @@
                 </div>
 
 
-
+                {% comment %}
                 <div class="tab-pane" id="statistics">
 
                     <section class="statistics">
@@ -152,6 +153,7 @@
                     </section>
 
                 </div>
+                {% endcomment %}
 
 
                 <div class="tab-pane" id="broadcasts">
