--- a/website/apps/profiles/templates/profiles/profile_detail.html
+++ b/website/apps/profiles/templates/profiles/profile_detail.html
@@ -58,7 +58,7 @@
     <div class="item_detail" style="">
 
 
-    <h1>+{{ object.get_api_url }}+</h1>
+{% comment %}<h1>+{{ object.get_api_url }}+</h1>{% endcomment %}
 
     <section class="shaded">
         <div class="row iteminfo release">
