--- a/website/site-static/sass/element/_itemview.sass
+++ b/website/site-static/sass/element/_itemview.sass
@@ -301,6 +301,21 @@ section.comments.disqus
                 line-height: 9px
 
 
+  section.statistics
+    .choices-container
+      ul
+        margin-top: 10px
+        clear: both
+        > li
+          padding: 0 30px 0 0
+          float: left
+          input, label
+            float: left
+          label
+            padding-left: 10px
+
+
+
 
 
 
