--- a/website/templates/element/chat/_message_list.html
+++ b/website/templates/element/chat/_message_list.html
@@ -12,7 +12,7 @@
 	            <img src="{{ media_url }}{{ object.image }}" />
 	            <p>
 		            <strong class="pull-right">{{ object.user }}<span class="timestamp">{{ timestamp }}</span></strong>
-		            <span class="message">{{{ object.comment_html }}}</small>
+		            <span class="message">{{ object.comment_html }}</small>
 	            </p>
 	        </li>
 	        {% endverbatim %}
@@ -106,8 +106,8 @@ SocketApp = function(base_app) {
 	};
 }; 	
 	
-var sa = new SocketApp;
-sa.init();
+//var sa = new SocketApp;
+//sa.init();
 	
 </script>
 {% endaddtoblock %}
